Keep the mobile menu around a bit longer to avoid cropped nav menus
The horizontal nav menu was being cropped at breakpoints between 768 (below which the mobile nav kicked in) and around 1020px even with a modest number of items. Although some additional room could be spared in the header by cramming items together (especially the nav menu against the logo) it wouldn't be enough to get the number of items we needed onto the line.

The solution is to keep the mobile menus around until a slightly larger breakpoint, 1024px. However, at 768 we put the search form and account menus up like we do at larger breakpoints, since there's room. Because of this, we also put the logo to the left, instead of centered (like it is on mobile). If it remained centered, it'd be a bit off balance.

The logo is designed to align vertically centered with the rest of the items which is good for generic logos. Some logos though, look better moved up or down a bit. For WMGK, I used absolute positioning to move the logo up a few pixels. YMMV

--- a/themes/greatermedia/assets/css/sass/components/_header.scss
+++ b/themes/greatermedia/assets/css/sass/components/_header.scss
@@ -48,8 +48,13 @@
 	padding: $header-logo-padding 0;
 	line-height: 1;
 	position: relative;
+	
 	@include bp(medium) {
+		max-width: 200px;
 		height: 82px;
+	}
+
+	@include bp(large) {
 		@include span-columns(2);
 		padding-left: $header-logo-padding;
 	}
@@ -64,8 +69,14 @@
 	position: relative;
 	top: 50%;
 	@include transform(translateY(-50%));
+
 	@include bp(medium){
+		margin-left: 70px; /* space enough for the mobile menu */
 		text-align: left;
+	}
+
+	@include bp(large) {
+		margin-left: auto;
 	}
 }
 
@@ -74,9 +85,7 @@
 	height: 82px;
 	display: none;
 	line-height: 1;
-	@include bp(medium) {
-		@include span-columns(3);
-	}
+
 	@include bp(large) {
 		@include span-columns(7);
 	}
@@ -136,10 +145,15 @@
 	margin: 0 auto;
 	text-align: center;
 	font-size: 25px;
+
 	@include bp(medium) {
 		height: 82px;
 		width: 64px;
 		padding: 32px 0;
+		font-size: ms(3);
+	}
+
+	@include bp(large) {
 		font-size: ms(1);
 	}
 }
@@ -213,6 +227,10 @@
 		height: 82px;
 		padding: 36px 0;
 		margin-left: .625em;
+		font-size: ms(0);
+	}
+
+	@include bp(large) {
 		font-size: ms(-2);
 	}
 }
@@ -226,6 +244,10 @@
 
 .header__search--btn:before {
 	@extend %gmr-icons;
-	font-size: ms(1);
+	font-size: ms(3);
 	content: "\e612";
+
+	@include bp(large) {
+		font-size: ms(1);
+	}
 }
