--- a/themes/wmgk/assets/css/sass/base/_overrides.scss
+++ b/themes/wmgk/assets/css/sass/base/_overrides.scss
@@ -65,3 +65,9 @@
 	}
 
 }
+
+.header__logo {
+	@include bp(medium) {
+		top: -7px;
+	}
+}
