--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -930,6 +930,9 @@ blockquote p {
   z-index: 2; }
   @media screen and (min-width: 768px) {
     .mobile-nav__toggle {
+      top: 25px; } }
+  @media screen and (min-width: 1024px) {
+    .mobile-nav__toggle {
       display: none; } }
 
 .mobile-nav__toggle--span {
@@ -985,7 +988,7 @@ blockquote p {
   border-right: 1px solid #d0d2d3;
   z-index: 1;
   overflow-y: auto; }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1024px) {
     .mobile-nav {
       display: none; } }
 
@@ -2324,11 +2327,14 @@ Community Highlights and Events
     margin-right: 0; }
   @media screen and (min-width: 768px) {
     .header__logo {
-      height: 82px;
+      max-width: 200px;
+      height: 82px; } }
+  @media screen and (min-width: 1024px) {
+    .header__logo {
       float: left;
       display: block;
-      margin-right: 3.57866%;
-      width: 22.316%;
+      margin-right: 2.35765%;
+      width: 14.70196%;
       padding-left: 18px; }
       .header__logo:last-child {
         margin-right: 0; } }
@@ -2348,20 +2354,17 @@ Community Highlights and Events
   transform: translateY(-50%); }
   @media screen and (min-width: 768px) {
     .header__logo--img {
+      margin-left: 70px;
+      /* space enough for the mobile menu */
       text-align: left; } }
+  @media screen and (min-width: 1024px) {
+    .header__logo--img {
+      margin-left: auto; } }
 
 .header__nav {
   height: 82px;
   display: none;
   line-height: 1; }
-  @media screen and (min-width: 768px) {
-    .header__nav {
-      float: left;
-      display: block;
-      margin-right: 3.57866%;
-      width: 35.26334%; }
-      .header__nav:last-child {
-        margin-right: 0; } }
   @media screen and (min-width: 1024px) {
     .header__nav {
       float: left;
@@ -2448,6 +2451,9 @@ Community Highlights and Events
       height: 82px;
       width: 64px;
       padding: 32px 0;
+      font-size: 1.42383em; } }
+  @media screen and (min-width: 1024px) {
+    .header__account--btn {
       font-size: 1.125em; } }
 
 /** An image is shown if the current user is logged in and Gigya gives us a thumbnail URL **/
@@ -2509,6 +2515,9 @@ Community Highlights and Events
       height: 82px;
       padding: 36px 0;
       margin-left: .625em;
+      font-size: 1em; } }
+  @media screen and (min-width: 1024px) {
+    .header__search--span {
       font-size: 0.79012em; } }
 
 .header__search--btn {
@@ -2518,8 +2527,11 @@ Community Highlights and Events
   padding: 34px 0 30px; }
 
 .header__search--btn:before {
-  font-size: 1.125em;
+  font-size: 1.42383em;
   content: "\e612"; }
+  @media screen and (min-width: 1024px) {
+    .header__search--btn:before {
+      font-size: 1.125em; } }
 
 .footer {
   width: 100%;
@@ -6971,5 +6983,9 @@ select {
     .live-player__stream .live-player__stream--current.open .live-player__stream--available li:last-child {
       border-bottom-left-radius: 1em;
       border-bottom-right-radius: 1em; }
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    top: -7px; } }
 
 /*# sourceMappingURL=wmgk.css.map */
